<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result_fraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <RadioButton
                android:id="@+id/result_radio_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:button="@null"
                android:checked="true"
                android:drawableLeft="@drawable/settings_radio_bg"
                android:text="@string/cc"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fw"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal">

                <com.xiajue.count.count.view.NoKeyboardEditText
                    android:id="@+id/result_number_edit_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"/>

                <com.xiajue.count.count.view.NoKeyboardEditText
                    android:id="@+id/result_number_edit_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:textSize="20dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <RadioButton
                android:id="@+id/result_radio_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:button="@null"
                android:checked="true"
                android:drawableLeft="@drawable/settings_radio_bg"/>

            <TextView
                android:id="@+id/result_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:focusable="false"
                android:textSize="15sp"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ts"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <SeekBar
                android:id="@+id/result_count_number_seekBar"
                style="@style/seekBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="10"/>

            <TextView
                android:id="@+id/result_count_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="10"
                android:textSize="18sp"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="标准答案"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="50dp"
                android:text="你的答案"
                android:textSize="18sp"/>
        </RelativeLayout>

        <ListView
            android:id="@+id/result_listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp">
        </ListView>

    </LinearLayout>

</RelativeLayout>
